--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "ISC",
   "scripts": {
     "start": "node lib/index",
-    "start:dev": "nodemon --exec node lib/index.js"
+    "start:dev": "nodemon --exec node lib/index.js",
+    "test": "mocha */*.spec.js --exit"
   },
   "repository": {
     "type": "git",
@@ -30,10 +31,14 @@
     "pg": "^6.0.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
-    "nodemon": "^1.9.2"
+    "mocha": "^6.1.4",
+    "nodemon": "^1.9.2",
+    "supertest": "^4.0.2"
   },
   "eslintConfig": {
     "extends": "airbnb-base",
